--- a/styles/task.css
+++ b/styles/task.css
@@ -19,6 +19,15 @@
   max-width: 1440px;
 }
 
+.addTask_container_board {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1440px;
+}
+
 .addTask_content {
   display: flex;
   align-items: center;
@@ -26,6 +35,14 @@
   flex-direction: column;
   width: 90%;
   margin-top: calc(22vh - 96px);
+}
+
+.addTask_content_board {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 90%;
 }
 
 .addTask_headline {
@@ -82,6 +99,13 @@
   align-items: center;
   justify-content: space-between;
   margin-top: calc(24vh - 96px);
+}
+.addTask_button_container_board {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 100px;
 }
 
 .addTask_button_content {
@@ -561,7 +585,6 @@ option:hover {
 .dropdown_container::-webkit-scrollbar-button:vertical:decrement {
   background-position: center bottom;
   background-image: url("../assets/img/scrollbarArrowUp.svg");
-
 }
 
 .dropdown_container::-webkit-scrollbar-button:vertical:increment {
